Fix add city title y position on mobile to match buttons

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -618,6 +618,7 @@ input[type="file"] {
 
   .back-btn {
     margin-top: 12px;
+    margin-bottom: 43px;
   }
 
   .page-header {
